src/test/ui/coherence/impl[t]-foreign[local]-for-fundamental[t].stderr
error[E0210]: type parameter `T` must be used as the type parameter for some local type (e.g., `MyStruct<T>`)
  --> $DIR/impl[t]-foreign[local]-for-fundamental[t].rs:12:6
   |
LL | impl<T> Remote1<Local> for Box<T> {
   |      ^ type parameter `T` must be used as the type parameter for some local type
   |
   = note: only traits defined in the current crate can be implemented for a type parameter

error[E0210]: type parameter `T` must be used as the type parameter for some local type (e.g., `MyStruct<T>`)
  --> $DIR/impl[t]-foreign[local]-for-fundamental[t].rs:16:6
   |
LL | impl<T> Remote1<Local> for &T {
   |      ^ type parameter `T` must be used as the type parameter for some local type
   |
   = note: only traits defined in the current crate can be implemented for a type parameter

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0210`.
